Add styles and test page per item

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.navbar a.active {
+    background: gray;
+    font-size: large;
+    border-bottom: 0.2em solid black;
+}
+
+.link-page:hover {
+    font-size: large;
+}
