Disable quantity input. Only plus/minus button can change quantity.

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,16 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 .navbar a.active {
     background: gray;
     font-size: large;
