--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+.hide-but-with-function::-webkit-scrollbar {
+    display: none;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
